[BSE-1801] Support table generator function (#6990)